packages/stylist/tests/macro_integrations/no_display_impl-fail.stderr
error[E0277]: `NoDisplay` doesn't implement `std::fmt::Display`
 --> $DIR/no_display_impl-fail.rs:7:23
  |
7 |         background: ${expr};
  |                       ^^^^
  |                       |
  |                       `NoDisplay` cannot be formatted with the default formatter
  |                       required by this bound in `write_expr`
  |
  = help: the trait `std::fmt::Display` is not implemented for `NoDisplay`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
