packages/stylist/tests/macro_integrations/no_display_impl-fail.rs
enum NoDisplay {
    ND,
}
fn main() {
    let expr = NoDisplay::ND;
    let _ = stylist::css! {
        background: ${expr};
    };
}
